--- a/app/bin/src/main/resources/application.properties
+++ b/app/bin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.freemarker.template-loader-path: classpath:/templates
 spring.freemarker.suffix: .ftl
 
-spring.datasource.url=jdbc:mysql://172.23.238.156:3306/test?useSSL=false
+spring.datasource.url=jdbc:mysql://mysql:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=hellokoding
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
