--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,20 @@ services:
    ports:
    - "3306:3306"
    restart: always
-  
+  neo4j:
+    image: neo4j:latest
+    # network_mode: "bridge"
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    environment:
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_dbms_shell_enabled=true
+    volumes:
+      - ./plugins:/plugins
+      - ./data:/data
+      - ./import:/import
   app:
     restart: always
     build: ./app
@@ -28,9 +41,10 @@ services:
     volumes:
       - ./app:/app
       - ~/.m2:/root/.m2
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
     command: mvn clean spring-boot:run
     depends_on:
       - nginx
       - mysql
+      - neo4j
